# balagan

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  bench_graph.py  bench_synthesis.py  pyproject.toml
docs/: web-streaming-architecture.md  web-streaming-windows-debug-handoff.md
prototypes/: gen_balagan.py
scripts/: benchmark_stream.py
src/balagan/: __init__.py  cli.py  config.py  logging_config.py
src/balagan/core/: __init__.py  canonical_mapping.py  engine.py  interpolator.py  latent_navigator.py  runtime_state.py  snapshot_manager.py  weight_blender.py
src/balagan/gui/: __init__.py  control_panel.py  main_window.py  render_worker.py  viewport.py
src/balagan/io/: __init__.py  control_mapping.py  dev_cert.py  frame_output.py  osc_server.py  output_macos.py  output_windows.py  video_encoder.py  video_recorder.py  web_stream.py
tests/: test_canonical_mapping.py  test_cli.py  test_config.py  test_control_mapping.py  test_engine.py  test_frame_output.py  test_interpolator.py  test_latent_navigator.py  test_osc_server.py  test_runtime_state.py  test_snapshot_manager.py  test_video_encoder.py  test_video_recorder.py  test_web_stream.py  test_weight_blender.py
web/: generate_cert.py  index.html  main.js  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx  theme.css
web/src/components/: ControlPanel.jsx  NumberInput.jsx  SliderControl.jsx  Toggle.jsx  Viewport.jsx
web/src/hooks/: controlSync.js  useStream.js
web/src/transport/: config.js  connection.js  decoder.js  protocol.js
web/tests/: controlSync.test.js  protocol.test.js
